Added more query tests