@@ -181,18 +181,23 @@ public class QueryEnrichTest extends BaseTest {
         checkQuery("from net.binis.codegen.Test u ", Collections.emptyList(),
                 () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) ", List.of(5.0),
+        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1)", List.of(5.0),
                 () -> net.binis.codegen.Test.find().by().amount(5.0).and().title().in(Collections.emptyList()).get());
 
         checkQuery("from net.binis.codegen.Test u where (u.amount = ?1)", List.of(5.0),
                 () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).and().amount(5.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where  (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
+        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
                 () -> net.binis.codegen.Test.find().by().not().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
 
-        checkQuery("from net.binis.codegen.Test u where (u.sub.subAmount = ?1) and   (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
-                () -> net.binis.codegen.Test.find().by().sub().subAmount(6.0).and().not().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
+        checkQuery("from net.binis.codegen.Test u where (u.amount = ?1) and  (u.sub.subAmount = ?2)", List.of(5.0, 6.0),
+                () -> net.binis.codegen.Test.find().by().title().in(Collections.emptyList()).and().amount(5.0).and().sub().subAmount(6.0).get());
 
+        checkQuery("from net.binis.codegen.Test u where (u.sub.subAmount = ?1) or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
+                () -> net.binis.codegen.Test.find().by().sub().subAmount(6.0).and().not().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
+
+        checkQuery("from net.binis.codegen.Test u where (u.sub.subAmount = ?1) or  (u.amount = ?2) and  (u.sub.subAmount = ?3)", List.of(6.0, 5.0, 6.0),
+                () -> net.binis.codegen.Test.find().by().sub().subAmount(6.0).and().title().in(Collections.emptyList()).or().amount(5.0).and().sub().subAmount(6.0).get());
 
         checkQuery("select u, sum(j0.subAmount),count(j1.subtitle) from net.binis.codegen.TestModify u join u.subs j0 join u.subs j1 where (j0.subtitle is null)  and  (j1.subAmount is null)  or  (u.amount is not null) group by u  order by sum(j0.subAmount) asc,count(j1.subtitle) desc, u.title", Collections.emptyList(),
                 () -> TestModify.find().by().subs()
